clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr22098_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr22098-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "a", align 4
        %2 = alloca s32i*, "p", align 8
        %3 = alloca u64i, "b", align 8
        %4 = alloca s32i[3], ".compoundliteral", align 4
        %5 = const 0 : s32i
        store %5, %0
        %6 = const 0 : s32i
        store %6, %1, align 4
        %7 = load %1 : s32i, align 4
        inc
        store %8, %1, align 4
        %9 = cast(integral) %8 : s64i
        %10 = cast(array_to_ptrdecay) %4 : s32i*
        %11 = const 0 : s32i
        store %11, %10, align 4
        %12 = const 1 : s64i
        ptr_stride
        %14 = const 1 : s32i
        store %14, %13, align 4
        %15 = const 2 : s64i
        ptr_stride
        %17 = const 2 : s32i
        store %17, %16, align 4
        get_element
        store %18, %2, align 8
        %19 = cast(ptr_to_int) %18 : u64i
        store %19, %3, align 8
        scope {
                %23 = load %1 : s32i, align 4
                %24 = const 1 : s32i
                cmp
                %26 = ternary %25 ? { : bool
                        %39 = const true : bool
                        yield %39
                } : {
                        %35 = load %2 : s32i*, align 8
                        %36 = load %35 : s32i, align 4
                        %37 = const 1 : s32i
                        cmp
                        yield %38
                }
                %27 = ternary %26 ? { : bool
                        %34 = const true : bool
                        yield %34
                } : {
                        %29 = load %3 : u64i, align 8
                        %30 = cast(int_to_ptr) %29 : s32i*
                        %31 = load %30 : s32i, align 4
                        %32 = const 1 : s32i
                        cmp
                        yield %33
                }
                if %27 {
                        %28 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %20 = get_global @exit : (s32i) -> void*
        %21 = const 0 : s32i
        call @exit(%21) [all]
        %22 = load %0 : s32i
        return %22
}
