clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr22141_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr22141-1.c" (c, x86_64-unknown-linux-gnu)
global u : rec_S = zero [external, default, align 1, dso_local]

fn abort() -> void [external, c, nothrow];
fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn c1(%arg4: rec_T*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: rec_T*):
        %146 = alloca rec_T*, "p", align 8
        store %arg4, %146
        scope {
            %152 = load %146 : rec_T*, align 8
            %153 = get_member %152[0] "a" : s8i*
            %154 = load %153 : s8i, align 1
            %155 = cast(integral) %154 : s32i
            %156 = const 1 : s32i
            %157 = cmp ne %155, %156 : bool
            %158 = ternary %157 ? { : bool
                %182 = const true : bool
                yield %182
            } : {
                %176 = load %146 : rec_T*, align 8
                %177 = get_member %176[1] "b" : s8i*
                %178 = load %177 : s8i, align 1
                %179 = cast(integral) %178 : s32i
                %180 = const 2 : s32i
                %181 = cmp ne %179, %180 : bool
                yield %181
            }
            %159 = ternary %158 ? { : bool
                %175 = const true : bool
                yield %175
            } : {
                %169 = load %146 : rec_T*, align 8
                %170 = get_member %169[2] "c" : s8i*
                %171 = load %170 : s8i, align 1
                %172 = cast(integral) %171 : s32i
                %173 = const 3 : s32i
                %174 = cmp ne %172, %173 : bool
                yield %174
            }
            %160 = ternary %159 ? { : bool
                %168 = const true : bool
                yield %168
            } : {
                %162 = load %146 : rec_T*, align 8
                %163 = get_member %162[3] "d" : s8i*
                %164 = load %163 : s8i, align 1
                %165 = cast(integral) %164 : s32i
                %166 = const 4 : s32i
                %167 = cmp ne %165, %166 : bool
                yield %167
            }
            if %160 {
                %161 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %147 = load %146 : rec_T*, align 8
        %148 = cast(bitcast) %147 : void*
        %149 = const 170 : s32i
        %150 = const 4 : u64i
        %151 = call @memset(%148, %149, %150) : void* [all]
        return
}
fn c2(%arg3: rec_S*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: rec_S*):
        %143 = alloca rec_S*, "p", align 8
        store %arg3, %143
        %144 = load %143 : rec_S*, align 8
        %145 = get_member %144[0] "t" : rec_T*
        call @c1(%145) [all]
        return
}
fn c3(%arg2: rec_U*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: rec_U*):
        %138 = alloca rec_U*, "p", align 8
        store %arg2, %138
        %139 = const 2 : s64i
        %140 = load %138 : rec_U*, align 8
        %141 = get_member %140[0] "s" : rec_S[4]*
        %142 = get_element %141[%139] : rec_S*
        call @c2(%142) [all]
        return
}
fn f1() -> void [external, c, no_inline, dso_local, nothrow] {
    %127 = alloca rec_S, ".compoundliteral", align 1
    %128 = get_global @u : rec_S*
    %129 = get_member %127[0] "t" : rec_T*
    %130 = get_member %129[0] "a" : s8i*
    %131 = const 1 : s8i
    store %131, %130, align 1
    %132 = get_member %129[1] "b" : s8i*
    %133 = const 2 : s8i
    store %133, %132, align 1
    %134 = get_member %129[2] "c" : s8i*
    %135 = const 3 : s8i
    store %135, %134, align 1
    %136 = get_member %129[3] "d" : s8i*
    %137 = const 4 : s8i
    store %137, %136, align 1
    copy %128, %127
    return
}
fn f2() -> void [external, c, no_inline, dso_local, nothrow] {
    %111 = const 1 : s8i
    %112 = get_global @u : rec_S*
    %113 = get_member %112[0] "t" : rec_T*
    %114 = get_member %113[0] "a" : s8i*
    store %111, %114, align 1
    %115 = const 2 : s8i
    %116 = get_global @u : rec_S*
    %117 = get_member %116[0] "t" : rec_T*
    %118 = get_member %117[1] "b" : s8i*
    store %115, %118, align 1
    %119 = const 3 : s8i
    %120 = get_global @u : rec_S*
    %121 = get_member %120[0] "t" : rec_T*
    %122 = get_member %121[2] "c" : s8i*
    store %119, %122, align 1
    %123 = const 4 : s8i
    %124 = get_global @u : rec_S*
    %125 = get_member %124[0] "t" : rec_T*
    %126 = get_member %125[3] "d" : s8i*
    store %123, %126, align 1
    return
}
fn f3() -> void [external, c, no_inline, dso_local, nothrow] {
    %95 = const 4 : s8i
    %96 = get_global @u : rec_S*
    %97 = get_member %96[0] "t" : rec_T*
    %98 = get_member %97[3] "d" : s8i*
    store %95, %98, align 1
    %99 = const 2 : s8i
    %100 = get_global @u : rec_S*
    %101 = get_member %100[0] "t" : rec_T*
    %102 = get_member %101[1] "b" : s8i*
    store %99, %102, align 1
    %103 = const 1 : s8i
    %104 = get_global @u : rec_S*
    %105 = get_member %104[0] "t" : rec_T*
    %106 = get_member %105[0] "a" : s8i*
    store %103, %106, align 1
    %107 = const 3 : s8i
    %108 = get_global @u : rec_S*
    %109 = get_member %108[0] "t" : rec_T*
    %110 = get_member %109[2] "c" : s8i*
    store %107, %110, align 1
    return
}
fn f4() -> void [external, c, no_inline, dso_local, nothrow] {
    %82 = alloca rec_S, "v", align 1
    %83 = const 1 : s8i
    %84 = get_member %82[0] "t" : rec_T*
    %85 = get_member %84[0] "a" : s8i*
    store %83, %85, align 1
    %86 = const 2 : s8i
    %87 = get_member %82[0] "t" : rec_T*
    %88 = get_member %87[1] "b" : s8i*
    store %86, %88, align 1
    %89 = const 3 : s8i
    %90 = get_member %82[0] "t" : rec_T*
    %91 = get_member %90[2] "c" : s8i*
    store %89, %91, align 1
    %92 = const 4 : s8i
    %93 = get_member %82[0] "t" : rec_T*
    %94 = get_member %93[3] "d" : s8i*
    store %92, %94, align 1
    call @c2(%82) [all]
    return
}
fn f5(%arg1: rec_S*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: rec_S*):
        %65 = alloca rec_S*, "p", align 8
        store %arg1, %65
        %66 = const 1 : s8i
        %67 = load %65 : rec_S*, align 8
        %68 = get_member %67[0] "t" : rec_T*
        %69 = get_member %68[0] "a" : s8i*
        store %66, %69, align 1
        %70 = const 3 : s8i
        %71 = load %65 : rec_S*, align 8
        %72 = get_member %71[0] "t" : rec_T*
        %73 = get_member %72[2] "c" : s8i*
        store %70, %73, align 1
        %74 = const 4 : s8i
        %75 = load %65 : rec_S*, align 8
        %76 = get_member %75[0] "t" : rec_T*
        %77 = get_member %76[3] "d" : s8i*
        store %74, %77, align 1
        %78 = const 2 : s8i
        %79 = load %65 : rec_S*, align 8
        %80 = get_member %79[0] "t" : rec_T*
        %81 = get_member %80[1] "b" : s8i*
        store %78, %81, align 1
        return
}
fn f6() -> void [external, c, no_inline, dso_local, nothrow] {
    %40 = alloca rec_U, "v", align 1
    %41 = const 1 : s8i
    %42 = const 2 : s64i
    %43 = get_member %40[0] "s" : rec_S[4]*
    %44 = get_element %43[%42] : rec_S*
    %45 = get_member %44[0] "t" : rec_T*
    %46 = get_member %45[0] "a" : s8i*
    store %41, %46, align 1
    %47 = const 2 : s8i
    %48 = const 2 : s64i
    %49 = get_member %40[0] "s" : rec_S[4]*
    %50 = get_element %49[%48] : rec_S*
    %51 = get_member %50[0] "t" : rec_T*
    %52 = get_member %51[1] "b" : s8i*
    store %47, %52, align 1
    %53 = const 3 : s8i
    %54 = const 2 : s64i
    %55 = get_member %40[0] "s" : rec_S[4]*
    %56 = get_element %55[%54] : rec_S*
    %57 = get_member %56[0] "t" : rec_T*
    %58 = get_member %57[2] "c" : s8i*
    store %53, %58, align 1
    %59 = const 4 : s8i
    %60 = const 2 : s64i
    %61 = get_member %40[0] "s" : rec_S[4]*
    %62 = get_element %61[%60] : rec_S*
    %63 = get_member %62[0] "t" : rec_T*
    %64 = get_member %63[3] "d" : s8i*
    store %59, %64, align 1
    call @c3(%40) [all]
    return
}
fn f7(%arg0: rec_U*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_U*):
        %11 = alloca rec_U*, "p", align 8
        store %arg0, %11
        %12 = const 1 : s8i
        %13 = const 2 : s64i
        %14 = load %11 : rec_U*, align 8
        %15 = get_member %14[0] "s" : rec_S[4]*
        %16 = get_element %15[%13] : rec_S*
        %17 = get_member %16[0] "t" : rec_T*
        %18 = get_member %17[0] "a" : s8i*
        store %12, %18, align 1
        %19 = const 3 : s8i
        %20 = const 2 : s64i
        %21 = load %11 : rec_U*, align 8
        %22 = get_member %21[0] "s" : rec_S[4]*
        %23 = get_element %22[%20] : rec_S*
        %24 = get_member %23[0] "t" : rec_T*
        %25 = get_member %24[2] "c" : s8i*
        store %19, %25, align 1
        %26 = const 4 : s8i
        %27 = const 2 : s64i
        %28 = load %11 : rec_U*, align 8
        %29 = get_member %28[0] "s" : rec_S[4]*
        %30 = get_element %29[%27] : rec_S*
        %31 = get_member %30[0] "t" : rec_T*
        %32 = get_member %31[3] "d" : s8i*
        store %26, %32, align 1
        %33 = const 2 : s8i
        %34 = const 2 : s64i
        %35 = load %11 : rec_U*, align 8
        %36 = get_member %35[0] "s" : rec_S[4]*
        %37 = get_element %36[%34] : rec_S*
        %38 = get_member %37[0] "t" : rec_T*
        %39 = get_member %38[1] "b" : s8i*
        store %33, %39, align 1
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_U, "w", align 1
    %2 = const 0 : s32i
    store %2, %0
    call @f1() [all]
    %3 = get_global @u : rec_S*
    call @c2(%3) [all]
    call @f2() [all]
    %4 = get_global @u : rec_S*
    %5 = get_member %4[0] "t" : rec_T*
    call @c1(%5) [all]
    call @f3() [all]
    %6 = get_global @u : rec_S*
    call @c2(%6) [all]
    call @f4() [all]
    %7 = get_global @u : rec_S*
    call @f5(%7) [all]
    %8 = get_global @u : rec_S*
    call @c2(%8) [all]
    call @f6() [all]
    call @f7(%1) [all]
    call @c3(%1) [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
